// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/FileInfoPreview should match snapshot, can download files 1`] = `
<div
  className="file-details__container"
>
  <div
    className="file-details__preview--clickable"
    onClick={[Function]}
  >
    <span
      className="file-details__preview-helper"
    />
    <img
      alt="file preview"
      src=""
    />
  </div>
  <div
    className="file-details"
  >
    <div
      className="file-details__name"
    >
      Test Image
    </div>
    <div
      className="file-details__info"
    >
      File type JPG, Size 100B
    </div>
  </div>
</div>
`;

exports[`components/FileInfoPreview should match snapshot, cannot download files 1`] = `
<div
  className="file-details__container"
>
  <span
    className="file-details__preview"
  >
    <span
      className="file-details__preview-helper"
    />
    <img
      alt="file preview"
      src=""
    />
  </span>
  <div
    className="file-details"
  >
    <div
      className="file-details__name"
    >
      Test Image 2
    </div>
    <div
      className="file-details__info"
    >
      File type PNG, Size 200B
    </div>
  </div>
</div>
`;
